fix menu header on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -71,6 +71,12 @@ body {
 }
 .header__menuIcon {
     display: none;
+    color: white;
+    font-size: 5rem;
+    line-height: var(--header-height);
+    padding: 0 2rem;
+    margin-right: 0;
+    margin-left: auto;
 }
 
 
